--- a/index.html
+++ b/index.html
@@ -88,16 +88,11 @@
 									If you are interested in all the <u>other stuff</u> I do outside of work & study, go <a href="#other">here</a>.<br>
 									<u>Contact details</u> you can find <a href="#contact">here</a>
 								</p>
-
-								<div>
-									<img class="image featured"src="images/pic08_2.jpg" alt="" style="flex: 1; text-align: right; border-radius: 50px;"/>
-								</div>
-
-								
-
-
 							</div>
 
+							<div>
+									<img class="image featured"src="images/pic08_2.jpg" alt="" style="flex: 1; text-align: right; border-radius: 50px;"/>
+							</div>
 						</div>
 					</section>
 
@@ -195,8 +190,7 @@
 			<div id="footer">
 
 				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<ul class="copyright">Design: Based on Prologue by <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
