--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="portfolio-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#work" id="work-link"><span class="icon solid fa-graduation-cap">Studies & Work</span></a></li>
-								<li><a href="#other" id="about-link"><span class="icon solid fa-th">Other interests</span></a></li>
+								<li><a href="#other" id="about-link"><span class="icon solid fa-th">Fun & Links</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
@@ -136,10 +136,10 @@
 						<div class="container">
 
 							<header>
-								<h2>Other interests</h2>
+								<h2>Fun & Links</h2>
 							</header>
 							<p style="text-align: left">
-							Apart from studying and working, I have a wide range of other interests:</p>
+							 mishmash of things that I'm passionate about or simply want to share with the world :</p>
 
 							<p style="text-align: left">
 							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organising a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride every year, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". So if you are ever in town, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the lastet updates on our plans. <br><i>Love is for everyone. Everyone is equal.</i></p>
