--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 								<h2>Fun & Links</h2>
 							</header>
 							<p style="text-align: left">
-							 mishmash of things that I'm passionate about or simply want to share with the world :</p>
+							 Find below a mishmash of things that I'm passionate about or simply want to share with the world:</p>
 
 							<p style="text-align: left">
 							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organising a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride every year, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". So if you are ever in town, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the lastet updates on our plans. <br><i>Love is for everyone. Everyone is equal.</i></p>
