--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 									Born and raised in Tübingen, I have recently returned to Potsdam after spending some time studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am in the early stages of planning my Master's thesis.
 									<br>
 									<br>
-									If you want to know more about my <u>studies & works</u>, you can go check it out <a href="#work">here</a>.<br>
-									If you are interested in all the <u>other stuff</u> I do (mainly) outside of work & study, go <a href="#other">here</a>.<br>
-									If you want to <u>get in touch</u> you can find my contact details <a href="#contact">here</a>.
+									If you want to know more about my <i>studies & works</i>, you can go check it out <a href="#work">here</a>.<br>
+									If you are interested the <i>stuff I do outside of studies & work or interesting links</i>, go <a href="#other">here</a>.<br>
+									If you want to <i>get in touch</i> you can find my contact details <a href="#contact">here</a>.
 								</p>
 							</div>
 
