--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<br>
 									<br>
 									If you want to know more about my <i>studies & works</i>, you can go check it out <a href="#work">here</a>.<br>
-									If you are interested the <i>stuff I do outside of studies & work or interesting links</i>, go <a href="#other">here</a>.<br>
+									If you are interested in <i>other stuff</i> I do outside of work & study or interesting links of <i>stuff I have done</i>, go <a href="#other">here</a>.<br>
 									If you want to <i>get in touch</i> you can find my contact details <a href="#contact">here</a>.
 								</p>
 							</div>
@@ -155,7 +155,7 @@
 							<p style="text-align: left">							
 
 							<b><u>In my free time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably: <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a><br>
-							</p> I am also still deeply in love with my student choir <a href="https://www.instagram.com/korigranskauen/" target="_blank"><i>Kor i Granskauen</i></a> during my time as an ERASMUS-student at <a href="https://www.oslomet.no/en/" target="_blank">OsloMet-University</a>. Should you plan on going there, I highly recommend joining them &#x1f49c.
+							I am also still deeply in love with my student choir <a href="https://www.instagram.com/korigranskauen/" target="_blank"><i>Kor i Granskauen</i></a> during my time as an ERASMUS-student at <a href="https://www.oslomet.no/en/" target="_blank">OsloMet-University</a>. Should you plan on going there, I highly recommend joining them &#x1f49c.</p> 
 							<br>
 
 							<p style="text-align: left">
