--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 							</header>
 
 							<p style="text-align: left">Thank you for showing interest in my work and what I do. <br>
-								If you want to get in touch, feel free to send me an email at: <a href="mailto:jan.weber@student.hu-berlin.de">jan.weber@student.hu-berlin.de</a></p>
+								If you want to get in touch, feel free to send me an email at: an.weber[at]student.hu-berlin.de</p>
 						</div>
 					</section>
 
