--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 							<br>
 
 							<b><u>Academia - Master</u></b><br>
-							Ever since I started my Master's program in Information Science at the Humboldt-Universität zu Berlin, I have developed a passion for working at the intersection of technology, society, and academia. My main areas of interest revolve around understanding how we interact with information systems and how these systems can either challenge or reinforce societal structures I am also passionate about digital citizenship and how we can actively participate in shaping our digital world. In particular, I am intrigued by the potential of Open Science and Open Data (think Open Government Data and Open Source) in fostering a more democratic society and academic system.<br>
+							Ever since I started my Master's program in Information Science at the Humboldt-Universität zu Berlin, I have developed a passion for working at the intersection of technology, society, and academia. My main areas of interest revolve around understanding how we interact with information systems and how these systems can either challenge or reinforce societal structures I am also passionate about digital citizenship and how we can actively participate in shaping our digital world. Besides that, I am intrigued by the potential of Open Science and Open Data (think Open Government Data and Open Source) in fostering a more democratic society and academic system. In my upcoming Master thesis, I hope to be able to focus in on the topic of <i>Digital Resilience</i>.<br>
 							<br>
 
 							<b><u>Work</u></b><br>
