--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="portfolio-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#work" id="work-link"><span class="icon solid fa-graduation-cap">Studies & Work</span></a></li>
+								<li><a href="#work" id="work-link"><span class="icon solid fa-graduation-cap">Academic Background & Work Experience</span></a></li>
 								<li><a href="#other" id="about-link"><span class="icon solid fa-th">Fun & Links</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
@@ -88,7 +88,7 @@
 									Born and raised in Tübingen, I have recently returned to Potsdam after spending some time studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am in the early stages of planning my Master's thesis.
 									<br>
 									<br>
-									If you want to know more about my <i>studies & works</i>, you can go check it out <a href="#work">here</a>.<br>
+									If you want to know more about my <i>academic background & work experience</i>, you can go check it out <a href="#work">here</a>.<br>
 									If you are interested in <i>other stuff</i> I do outside of work & study or interesting links of <i>stuff I have done</i>, go <a href="#other">here</a>.<br>
 									If you want to <i>get in touch</i> you can find my contact details <a href="#contact">here</a>.
 								</p>
@@ -105,7 +105,7 @@
 						<div class="container">
 
 							<header>
-								<h2>Studies & Work</h2>
+								<h2>Academic Background & Work Experience</h2>
 							</header>
 							<p style="text-align: left">
 								<b><u>Academia - Bachelor</u></b><br>
