--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="portfolio-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#work" id="work-link"><span class="icon solid fa-graduation-cap">Academic Background & Work Experience</span></a></li>
+								<li><a href="#work" id="work-link"><span class="icon solid fa-graduation-cap">Academic Background & <br> Work Experience</span></a></li>
 								<li><a href="#other" id="about-link"><span class="icon solid fa-th">Fun & Links</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
@@ -109,7 +109,7 @@
 							</header>
 							<p style="text-align: left">
 								<b><u>Academia - Bachelor</u></b><br>
-							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalized communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on how one particular public library handling of right-wing literature, analyzing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the District library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for diversity-oriented opening</a> and topped it off with a Bachelor thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
+							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalized communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analyzing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the District library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for diversity-oriented opening</a> and topped it off with a Bachelor thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
 							<br>
 
 							<b><u>Academia - Master</u></b><br>
@@ -117,12 +117,12 @@
 							<br>
 
 							<b><u>Work</u></b><br>
-							I have worked in a diverse range of jobs,from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to my current job at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms">dms - der moderne Staat</a> journal. <br>
-							Among them, the most noteworthy one would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organizing lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.
-
+							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstan at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms">dms - der moderne Staat</a> journal, a job I am currently just starting at. <br>
+							Among them, that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organizing lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.
+							<br>
 
 							<b><u>Languages</u></b><br>
-							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English of jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in the upper beginner stage of learning Mandarin. So 如果你能理解這個，我熱烈歡迎你來到我的網站 (any corrections are very welcome &#128515).<br>
+							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in the upper beginner stage of learning Mandarin. So 如果你能理解這個，我熱烈歡迎你來到我的網站 (any corrections are very welcome &#128515).<br>
 							<br>
 							If you are interested in a more formal CV, feel free to download the latest version <a href="./docs/weberjanraoul_cv.pdf" target="_blank">here</a>.
 							</p>
