--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 							 Below, you can find a mishmash of things that I am passionate about or simply want to share with the world:</p>
 
 							<p style="text-align: left">
-							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organising a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride every year, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". So if you are ever in town, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the lastet updates on our plans. <br><i>Love is for everyone. Everyone is equal.</i></p>
+							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organising a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". So if you are ever in town, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the lastet updates on what we are up to. <br><i>Keep calm 'cause love is love</i></p>
 							<br>
 							<p style="text-align: left">
 							<a href="https://www.researchgate.net/profile/Jan-Weber-25" target="_blank"><b><u>ResearchGate</u></b></a>&#127891: If you are interested in my academic work, please check out my ResearchGate profile. It is still a bit quiet there, but I hope to fill it up in the near future.
@@ -154,15 +154,15 @@
 
 							<p style="text-align: left">							
 
-							<b><u>In my free time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably: <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a><br>
+							<b><u>In my spare time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably: <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a><br>
 							I am also still deeply in love with my student choir <a href="https://www.instagram.com/korigranskauen/" target="_blank"><i>Kor i Granskauen</i></a> during my time as an ERASMUS-student at <a href="https://www.oslomet.no/en/" target="_blank">OsloMet-University</a>. Should you plan on going there, I highly recommend joining them &#x1f49c.</p> 
 							<br>
 
 							<p style="text-align: left">
 							<b><u>Other things I love</u></b>:<br>
-							Eye-opening non-fiction book(s)&#x1f4da:<a href="https://en.wikipedia.org/wiki/Weapons_of_Math_Destruction#:~:text=WMDs%2C%20or%20Weapons%20of%20Math,against%20certain%20groups%20of%20people." target="_blank">Weapons of Math Destruction</a>/<a href="https://en.wikipedia.org/wiki/Data_Feminism" target="_blank">Data Feminism</a>
+							Favorite non-fiction books &#x1f4da:<a href="https://en.wikipedia.org/wiki/Weapons_of_Math_Destruction#:~:text=WMDs%2C%20or%20Weapons%20of%20Math,against%20certain%20groups%20of%20people." target="_blank">Weapons of Math Destruction</a> / <a href="https://en.wikipedia.org/wiki/Data_Feminism" target="_blank">Data Feminism</a>
 							<br>
-							Favorite fiction book(s)&#x1f4da: <a href="https://en.wikipedia.org/wiki/The_City_of_Dreaming_Books" target="_blank">The City of Dreaming Books</a> / <a href="https://en.wikipedia.org/wiki/The_Song_of_Achilles" target="_blank">The Song of Achilles</a>
+							Favorite fiction books &#x1f4da: <a href="https://en.wikipedia.org/wiki/The_City_of_Dreaming_Books" target="_blank">The City of Dreaming Books</a> / <a href="https://en.wikipedia.org/wiki/The_Song_of_Achilles" target="_blank">The Song of Achilles</a>
 							<br>
 							Big Fan of Studio Ghibli &#x1f3a5:
 							My Neighbor Totoro (&#x1f947) / Only Yesterday (close &#129352) / Grave of the Fireflies (&#x1f494).
