--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
 								<h2>Academic Background & Work Experience</h2>
 							</header>
 							<p style="text-align: left">
-								<b><u>Academia - Bachelor</u></b><br>
+								<b><u>Bachelor</u></b><br>
 							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalized communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analyzing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the District library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for diversity-oriented opening</a> and topped it off with a Bachelor thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
 							<br>
 
-							<b><u>Academia - Master</u></b><br>
+							<b><u>Master</u></b><br>
 							Ever since I started my Master's program in Information Science at the Humboldt-Universität zu Berlin, I have developed a passion for working at the intersection of technology, society, and academia. My main areas of interest revolve around understanding how we interact with information systems and how these systems can either challenge or reinforce societal structures I am also passionate about digital citizenship and how we can actively participate in shaping our digital world. Besides that, I am intrigued by the potential of Open Science and Open Data (think Open Government Data and Open Source) in fostering a more democratic society and academic system. In my upcoming Master thesis, I hope to be able to focus in on the topic of <i>Digital Resilience</i>.<br>
 							<br>
 
