--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<p style="flex: 1; padding: 20px; text-align: left;">
 									Hi! I am Jan. 
 
-									Born and raised in Tübingen, I have recently returned to Potsdam after spending some time studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am in the early stages of planning my Master's thesis.
+									Born and raised in Tübingen, I am currently living in Potsdam while pursuing my Master's degree in <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/master">Information Science</a> at the Humboldt-Universität zu Berlin. I recently returned to Potsdam after spending some time studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am in the early stages of planning my Master's thesis.
 									<br>
 									<br>
 									If you want to know more about my <i>academic background & work experience</i>, you can go check it out <a href="#work">here</a>.<br>
