--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							</header>
 							<p style="text-align: left">
 								<b><u>Bachelor</u></b><br>
-							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalized communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analyzing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the District library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for diversity-oriented opening</a> and topped it off with a Bachelor thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
+							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalized communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analyzing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the district library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for Diversity-Oriented Opening</a> and topped it off with a Bachelor thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
 							<br>
 
 							<b><u>Master</u></b><br>
@@ -117,8 +117,8 @@
 							<br>
 
 							<b><u>Work</u></b><br>
-							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstan at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms">dms - der moderne Staat</a> journal, a job I am currently just starting at.<br>
-							Among them, that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organizing lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
+							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms">dms - der moderne Staat</a> journal, a job I am currently just starting at.<br>
+							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organizing lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
 							<br>
 
 							<b><u>Languages</u></b><br>
@@ -142,7 +142,7 @@
 							 Below, you can find a mishmash of things that I am passionate about or simply want to share with the world:</p>
 
 							<p style="text-align: left">
-							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organising a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". So if you are ever in town, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the lastet updates on what we are up to. <br><i>Love is for everyone. Everyone is equal</i></p>
+							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organising a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". So if you are ever in town, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the lastet updates on what we are up to. <br><i>Love is for everyone. Everyone is equal</i>.</p>
 							
 							<p style="text-align: left">
 							<a href="https://www.researchgate.net/profile/Jan-Weber-25" target="_blank"><b><u>ResearchGate</u></b></a>&#127891: If you are interested in my academic work, please check out my ResearchGate profile. It is still a bit quiet there, but I hope to fill it up in the near future.
@@ -154,8 +154,8 @@
 
 							<p style="text-align: left">							
 
-							<b><u>In my spare time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably: <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a><br>
-							I am also still deeply in love with my student choir <a href="https://www.instagram.com/korigranskauen/" target="_blank"><i>Kor i Granskauen</i></a> during my time as an ERASMUS-student at <a href="https://www.oslomet.no/en/" target="_blank">OsloMet-University</a>. Should you plan on going there, I highly recommend joining them &#x1f49c.</p> 
+							<b><u>In my spare time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a><br>
+							I am also still deeply in love with my student choir <a href="https://www.instagram.com/korigranskauen/" target="_blank"><i>Kor i Granskauen</i></a> I joined during my time as an ERASMUS-student at <a href="https://www.oslomet.no/en/" target="_blank">OsloMet-University</a>. Should you plan on going there for a stay abroad, I highly recommend joining them &#x1f49c.</p> 
 							
 
 							<p style="text-align: left">
