--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 									Born and raised in Tübingen, I am currently living in Potsdam while pursuing my Master's degree in <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/master">Information Science</a> at the Humboldt-Universität zu Berlin. I recently returned to Potsdam after spending some time studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am in the early stages of planning my Master's thesis.
 									<br>
 									<br>
-									If you want to know more about my <i>academic background & work experience</i>, you can go check it out <a href="#work">here</a>.<br>
-									If you are interested in <i>other stuff</i> I do outside of work & study or interesting links of <i>stuff I have done</i>, go <a href="#other">here</a>.<br>
+									If you want to know more about my <i>academic background & work experience</i>, you can have a look at it <a href="#work">here</a>.<br>
+									If you are interested in <i>other stuff</i> I do outside of work & study or interesting links to <i>stuff I have done</i>, go <a href="#other">here</a>.<br>
 									If you want to <i>get in touch</i> you can find my contact details <a href="#contact">here</a>.
 								</p>
 							</div>
