--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.researchgate.net/profile/Jan-Weber-25" class="icon brands fa-researchgate"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.instagram.com/j_r_web/?hl=en" class="icon brands fa-instagram"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.researchgate.net/profile/Jan-Weber-25" class="icon brands fa-researchgate" target="_blank"><span class="label">ResearchGate</span></a></li>
+							<li><a href="https://www.instagram.com/j_r_web/?hl=en" class="icon brands fa-instagram"><span class="label" target="_blank">Instagram</span></a></li>
 						</ul>
 
 				</div>
