--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://www.researchgate.net/profile/Jan-Weber-25" class="icon brands fa-researchgate" target="_blank"><span class="label">ResearchGate</span></a></li>
-							<li><a href="https://www.instagram.com/j_r_web/?hl=en" class="icon brands fa-instagram"><span class="label" target="_blank">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/j_r_web/?hl=en" class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 						</ul>
 
 				</div>
