--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 							</div>
 
 							<div>
-									<img class="image featured"src="images/pic08_2.jpg" alt="" style="flex: 1; text-align: right; border-radius: 50px; width:50%"/>
+									<img class="image featured"src="images/pic08_2.jpg" alt="" style="flex: 1; text-align: right; border-radius: 50px; width:50%; height:50%"/>
 							</div>
 						</div>
 					</section>
