--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 							<p style="text-align: left">							
 
-							<b><u>In my spare time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a><br>
+							<b><u>In my spare time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a>.<br>
 							I am also still deeply in love with my student choir <a href="https://www.instagram.com/korigranskauen/" target="_blank"><i>Kor i Granskauen</i></a> I joined during my time as an ERASMUS-student at <a href="https://www.oslomet.no/en/" target="_blank">OsloMet-University</a>. Should you plan on going there for a stay abroad, I highly recommend joining them &#x1f49c.</p> 
 							
 
@@ -165,7 +165,7 @@
 							Favorite fiction books &#x1f4da: <a href="https://en.wikipedia.org/wiki/The_City_of_Dreaming_Books" target="_blank">The City of Dreaming Books</a> / <a href="https://en.wikipedia.org/wiki/The_Song_of_Achilles" target="_blank">The Song of Achilles</a>
 							<br>
 							Big Fan of Studio Ghibli &#x1f3a5:
-							My Neighbor Totoro (&#x1f947) / Only Yesterday (close &#129352) / Grave of the Fireflies (&#x1f494).
+							My Neighbor Totoro (&#x1f947) / Only Yesterday (close &#129352) / Grave of the Fireflies (&#x1f494)
 							</p>
 						</div>
 						<hr>
