--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<p style="flex: 1; padding: 20px; text-align: left;">
 									Hi! I am Jan. 
 
-									Born and raised in Tübingen, I am currently living in Potsdam while pursuing my Master's degree in <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/master">Information Science</a> at the Humboldt-Universität zu Berlin. I recently returned to Potsdam after spending some time studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am in the early stages of planning my Master's thesis.
+									Born and raised in Tübingen, I am currently living in Potsdam while pursuing my Master's degree in <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/master">Information Science</a> at the Humboldt-Universität zu Berlin. I returned to Potsdam after spending the first half of 2023 studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am writing my Master's thesis.
 									<br>
 									<br>
 									If you want to know more about my <i>academic background & work experience</i>, you can have a look at it <a href="#work">here</a>.<br>
@@ -109,15 +109,15 @@
 							</header>
 							<p style="text-align: left">
 								<b><u>Bachelor</u></b><br>
-							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalized communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analyzing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the district library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for Diversity-Oriented Opening</a> and topped it off with a Bachelor thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
+							During my Bachelor's degree, I immersed myself in the work of public libraries as influental institutional players within a community. I was mainly interested in how they can provide a space for public discourse, empower marginalized communities and thereby tackle problems such as the <a href="https://en.wikipedia.org/wiki/Digital_divide">Digital Divide</a>. As part of my studies, I delved into a case study on one particular public library's handling of right-wing literature, analyzing it from a neo-institutionalist perspective considering the various challenges it faced by the different stakeholders within the community. Additionally, I interned at the district library of Pankow's <a href="https://www.berlin.de/stadtbibliothek-pankow/wir-ueber-uns/diversitaet-vielfalt/" target="_blank">Office for Diversity-Oriented Opening</a> and topped it off with a Bachelor's thesis about assessing the availability of LGBTIQ*-literature in the district libraries of Berlin.<br>
 							<br>
 
 							<b><u>Master</u></b><br>
-							In my master's degree, my research interests have shifted towards the intersection of technology, individuals, and society. I concentrate on how and why users utilize specific information systems by studying users' information needs, the integration of these systems into everyday life, and their use by specific user groups (including topics such as multilingualism and accessibility). My recent work focused on developing a method to study the use of serendipity-based systems (such as TikTok) in everyday life. Additionally, I am interested in the digital transformation of society, particularly in the context of Open (Government) Data and Open Source as well as the role of public institutions, such as public and academic libraries, in this transformation. In my future work, I plan to explore the concept of digital resilience in the context of everyday interactions with information systems and its potential usefulness in information science, especially regarding the already established concept of information literacy.<br>
+							In my Master's degree, my research interests have shifted towards the intersection of technology, individuals, and society. I concentrate on how and why users utilize specific information systems by studying users' information needs, the integration of these systems into everyday life, and their use by specific user groups (including topics such as multilingualism and accessibility). My recent work focused on developing a method to study the use of serendipity-based systems (such as TikTok) in everyday life. Additionally, I am interested in the digital transformation of society, particularly in the context of Open (Government) Data and Open Source as well as the role of public institutions, such as public and academic libraries, in this transformation. In my future work, I plan to explore the concept of digital resilience in the context of everyday interactions with information systems and its potential usefulness in information science, especially regarding the already established concept of information literacy.<br>
 							<br>
 
 							<b><u>Work</u></b><br>
-							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms">dms - der moderne Staat</a> journal, a job I am currently just starting at.<br>
+							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms">dms - der moderne Staat</a> journal.<br>
 							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organizing lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
 							<br>
 
@@ -154,7 +154,7 @@
 
 							<p style="text-align: left">							
 
-							<b><u>In my spare time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist is probably <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風) (Spotify)</a>.<br>
+							<b><u>In my spare time</u></b>, I am a music enthusiast in all its forms &#x1f3b9. Making it, listening to it and dancing to it. Currently, my favorite artist are probably <a href ="https://open.spotify.com/artist/6bDWAcdtVR3WHz2xtiIPUi" target="_blank">Fuji Kaze (藤井 風)</a>, <a href="https://open.spotify.com/artist/7naloiyHdmw1HsJd95OYDL" target="_blank">The Crane</a> and <a href="https://open.spotify.com/artist/4eh2JeBpQaScfHKKXZh5vO">LUCY (루시)</a>.<br>
 							I am also still deeply in love with my student choir <a href="https://www.instagram.com/korigranskauen/" target="_blank"><i>Kor i Granskauen</i></a> I joined during my time as an ERASMUS-student at <a href="https://www.oslomet.no/en/" target="_blank">OsloMet-University</a>. Should you plan on going there for a stay abroad, I highly recommend joining them &#x1f49c.</p> 
 							
 
@@ -165,7 +165,7 @@
 							Favorite fiction books &#x1f4da: <a href="https://en.wikipedia.org/wiki/The_City_of_Dreaming_Books" target="_blank">The City of Dreaming Books</a> / <a href="https://en.wikipedia.org/wiki/The_Song_of_Achilles" target="_blank">The Song of Achilles</a>
 							<br>
 							Big Fan of Studio Ghibli &#x1f3a5:
-							My Neighbor Totoro (&#x1f947) / Only Yesterday (close &#129352) / Grave of the Fireflies (&#x1f494)
+							My Neighbor Totoro (&#x1f947) / Only Yesterday (close &#129352)
 							</p>
 						</div>
 						<hr>
