--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<br>
 
 							<b><u>Languages</u></b><br>
-							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in the upper beginner stage of learning Mandarin. So 如果你能理解這個，我熱烈歡迎你來到我的網站 (any corrections are very welcome &#128515).<br>
+							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in the upper beginner stage of learning Taiwanese Mandarin. So 如果你能理解這個，我熱烈歡迎你來到我的網站 (any corrections are very welcome &#128515).<br>
 							<br>
 							If you are interested in a more formal CV, feel free to download the latest version <a href="./docs/weberjanraoul_cv.pdf" target="_blank">here</a>.
 							</p>
