--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 							<br>
 
 							<b><u>Work</u></b><br>
-							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms">dms - der moderne Staat</a> journal.<br>
+							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms" target="_blank">dms - der moderne Staat</a> journal at the <a href="https://www.hertie-school.org/en/">Hertie School Berlin</a>.<br>
 							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organising lectures and student groups, and swiftly digitising the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
 							<br>
 
