--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<h2 class="alt">Hi there! <br> Welcome to my corner of the Internet.</h2>
 								<p>Feel free to have a look around
 								</p>
-								<p>(or otherwise just enjoy this stunning view of the Oslo Fjord shot from Aker Brygge)
+								<p>(or otherwise just enjoy this view of the Oslo Fjord on a winter's morning shot from Aker Brygge)
 								</p>
 							</header>
 
@@ -85,7 +85,7 @@
 								<p style="flex: 1; padding: 20px; text-align: left;">
 									Hi! I am Jan. 
 
-									Born and raised in Tübingen, I am currently living in Potsdam while pursuing my Master's degree in <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/master">Information Science</a> at the Humboldt-Universität zu Berlin. I returned to Potsdam after spending the first half of 2023 studying abroad at <a href="https://www.oslomet.no/" target="_blank">Oslo Metropolitan University</a>. Although I initially pursued studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>. Currently, I am writing my Master's thesis.
+									Born and raised in Tübingen, I am currently  on a <a href="https://depart.moe.edu.tw/NY/cp.aspx?n=C18D75289A0D07E3&s=767040920EBF5D27">Huayu Enrichment Scholarship</a> stay in Taiwan, studying Taiwanese Mandarin at <a href="https://www.fcu.edu.tw/en/">Feng Chia University</a>. After initially pursuing studies in Law and Political Science & Public Administration, I have now found my passion in <i>Information Science</i>.
 									<br>
 									<br>
 									If you want to know more about my <i>academic background & work experience</i>, you can have a look at it <a href="#work">here</a>.<br>
@@ -113,19 +113,37 @@
 							<br>
 
 							<b><u>Master</u></b><br>
-							In my Master's degree, my research interests have shifted towards the intersection of technology, individuals, and society. I concentrate on how and why users utilise specific information systems by studying users' information needs, their interactions with different types of information systems, the characterstics of these information systems, the integration of them into everyday life, the users' judgement (relevence and resonance) of the presented information and their further usage of it. My recent work focused on developing a methodical approach to studying the use of visual social recommender systems (such as TikTok, Instagram Reels, etc.) in everyday life. Additionally, I am passionate about Open Access, Open Data and Civic Tech as well as the role of public institutions, such as public and academic libraries, in the digital transformation of society. In my current Master's thesis, I investigate the Information Needs and contexts of visual social recommender system usage and how the information is further used. In my future work, I plan to explore the concept of digital resilience in the context of everyday interactions with information systems and its potential usefulness in information science, especially regarding the already established concept of information literacy.<br>
+							During my Master's degree, my research interests have evolved to focus on Video Social Recommender Systems (VSRS) such as TikTok and Instagram Reels, as well as information literacy. I was particularly interested in understanding why users engage with these platforms, the contexts in which they do so, their integration into daily life, and how individuals encounter information through them. In my future research, I aim to expand this inquiry to explore the relevance criteria users apply when consuming content, the reasons behind their trust in certain information over others, and the channels they utilize when uncertain about the veracity of the information they encounter. Specifically, I am drawn to political information in contested regions, such as Taiwan and Europe, the latter of which has become increasingly contentious following the onset of the Russian invasion of Ukraine.  I believe it is crucial to understand how users establish authority regarding whom to trust on VSRS and how they navigate uncertainty in order to effectively combat misinformation campaigns on these platforms. In addition to this micro-level approach, I am also interested in expanding my research to how public institutions across different countries conceptualize information and digital literacy, as well as their strategies for planning and implementing information literacy campaigns that enhance citizens' resilience to potential online dangers, particularly on VSRS. Methodologically, my recent work has centered on developing a systematic approach to studying the use of VSRS in everyday life, which presents unique challenges due to their highly personalized nature.<br>
 							<br>
 
 							<b><u>Work</u></b><br>
-							I have worked in a diverse range of jobs, from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms" target="_blank">dms - der moderne Staat</a> journal at the <a href="https://www.hertie-school.org/en/">Hertie School Berlin</a>.<br>
-							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organising lectures and student groups, and swiftly digitising the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
+							I have worked in a diverse range of jobs, starting out from the fun-sounding, but for sugar-intake detrimental, work at a chocolate factory, to working in Covid-vaccination centers, to now being a student assisstant at the Editorial Office of the <a href="https://www.budrich-journals.de/index.php/dms" target="_blank">dms - der moderne Staat</a> journal at the <a href="https://www.hsu-hh.de/en/">Helmut-Schmidt Universität Universität der Bundeswehr Hamburg</a>.<br>
+							Among them, the one that left the biggest mark up till now, would be my work as a student assistant for the <a href="https://www.ibi.hu-berlin.de/de/studium/studiengaenge/fernstudium">distant learning programme of the Institute for Library- and Information Science at the Humboldt-Universität zu Berlin</a>. Not only did I have the chance to collaborate with incredible colleagues, but I also had the opportunity to take on various responsibilities such as organising lectures and student groups, and swiftly digitizing the entire program when the Covid-19 pandemic hit. These experiences were truly invaluable and continue to shape my professional growth to this day.<br>
 							<br>
 
 							<b><u>Languages</u></b><br>
-							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in the upper beginner stage of learning Taiwanese Mandarin. So 如果你能理解這個，我熱烈歡迎你來到我的網站 (any corrections are very welcome &#128515).<br>
+							Apart from my academic and professional pursuits, I love learning new languages. Over time, I have achieved a level of fluency in English and jeg også snakker litt Norsk (bra nok å gå handle eller holder enkle samtaler som snakker om været). Currently, I am in learning Taiwanese Mandarin at the <a href="https://clc.fcu.edu.tw/">Language Center of Feng Chai University</a> in Taichung, Taiwan. So 如果你能理解這個，我熱烈歡迎你來到我的網站.<br>
 							<br>
 							If you are interested in a more formal CV, feel free to download the latest version <a href="./docs/weberjanraoul_cv.pdf" target="_blank">here</a>.
 							</p>
+
+
+						</div>
+					</section>
+
+				<!-- Publications -->
+					<section id="publications" class="three">
+						<div class="container">
+							<header>
+								<h2>Publications</h2>
+								<p style="text-align: left">
+							 Weber, Jan Raoul (upcoming). <i>Information needs in the everyday usage of video social recommender systems. An initial exploration</i>. Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft, Issue XX. Master's thesis. Accepted, copyediting stage.</p>
+
+								<p style="text-align: left">
+							Weber, Jan Raoul (upcoming). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i>Information Research X</i>(X). Accepted, copyediting stage.
+								
+							</header>
+
 
 
 						</div>
@@ -142,7 +160,7 @@
 							 Below, you can find a mishmash of things that I am passionate about or simply want to share with the world:</p>
 
 							<p style="text-align: left">
-							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organising a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". So if you are ever in town, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the lastet updates on what we are up to. <br><i>Love is for everyone. Everyone is equal</i>.</p>
+							<a href="https://www.regenbogen-potsdam.de/" target="_blank"><b><u>Regenbogen Potsdam</u></b></a>&#127752 : Regenbogen Potsdam is an association founded in 2020 during the Corona pandemic. It started out organizing a Bike-Pride Parade when social distancing was still a priority. Since joining in 2021, I cherish all the great experiences and wonderful people I have met there. Besides the annually growing Bike-Pride, Regenbogen Potsdam also works on establishing more queer events in Potsdam through a recurring "Stammtisch". Unfortunately, since leaving Potsdam in August 2024, I have become a passive member, but should you ever head to Potsdam, check out our <a href="https://www.instagram.com/regenbogenpotsdam/" target="_blank">Instagram</a> for the latet updates. <br><i>Love is for everyone. Everyone is equal</i>.</p>
 							
 							<p style="text-align: left">
 							<a href="https://www.researchgate.net/profile/Jan-Weber-25" target="_blank"><b><u>ResearchGate</u></b></a>&#127891: If you are interested in my academic work, please check out my ResearchGate profile. It is still a bit quiet there, but I hope to fill it up in the near future.
