--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#about" id="portfolio-link"><span class="icon solid fa-user">About Me</span></a></li>
 								<li><a href="#work" id="work-link"><span class="icon solid fa-graduation-cap">Academic Background & <br> Work Experience</span></a></li>
+								<li><a href="#publications" id="publications-link"><span class="fa fa-pencil-square" aria-hidden="true">Publications</span></a></li>
 								<li><a href="#other" id="about-link"><span class="icon solid fa-th">Fun & Links</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
 							</ul>
