--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 							<header>
 								<h2>Publications</h2>
 								<p style="text-align: left">
-							 Weber, Jan Raoul (upcoming). <i>Information needs in the everyday usage of video social recommender systems. An initial exploration</i>. Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft, Issue XX. Master's thesis. Accepted, copyediting stage.</p>
+							 Weber, Jan Raoul (upcoming). <i>Information needs in the everyday usage of video social recommender systems. An initial exploration</i>. <a href="https://pages.cms.hu-berlin.de/ibi/BHR/">Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft</a>, Issue XX. Master's thesis. Accepted, copyediting stage.</p>
 
 								<p style="text-align: left">
-							Weber, Jan Raoul (upcoming). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i>Information Research X</i>(X). Accepted, copyediting stage.
+							Weber, Jan Raoul (upcoming). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i><a href="https://informationr.net/infres">Information Research</a> X</i>(X). Accepted, copyediting stage.
 								
 							</header>
 
