--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							 Weber, Jan Raoul (upcoming). <i>Information needs in the everyday usage of video social recommender systems. An initial exploration</i>. <a href="https://pages.cms.hu-berlin.de/ibi/BHR/" target="_blank">Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft</a>, Issue XX. Master's thesis. Accepted, copyediting stage.</p>
 
 								<p style="text-align: left">
-							Weber, Jan Raoul (upcoming). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i><a href="https://informationr.net/infres" target="_blank">Information Research</a> X</i>(X). Accepted, copyediting stage.
+							Weber, Jan Raoul (2025). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i><a href="https://informationr.net/infres" target="_blank">Information Research</a></i>,<i>30</i>(a). <a href="https://doi.org/10.47989/ir30140522" target="_blank">https://doi.org/10.47989/ir30140522</a>
 								
 							</header>
 
