--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
 							<header>
 								<h2>Publications</h2>
 								<p style="text-align: left">
-							 Weber, Jan Raoul (upcoming). <i>Information needs in the everyday usage of video social recommender systems. An initial exploration</i>. <a href="https://pages.cms.hu-berlin.de/ibi/BHR/" target="_blank">Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft</a>, Issue XX. Master's thesis. Accepted, copyediting stage.</p>
+							 Weber, Jan Raoul (2025). <i>Information Needs in the Everyday Usage of Video Social Recommender Systems. An Initial Exploration</i>. <a href="https://pages.cms.hu-berlin.de/ibi/BHR/" target="_blank">Berliner Handreichungen zur Bibliotheks- und Informationswissenschaft</a>, Issue 547. Master's thesis. <a href="https://doi.org/10.18452/31518" target="_blank">https://doi.org/10.18452/31518</a></p>
 
 								<p style="text-align: left">
-							Weber, Jan Raoul (2025). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i><a href="https://informationr.net/infres" target="_blank">Information Research</a></i>,<i>30</i>(a). <a href="https://doi.org/10.47989/ir30140522" target="_blank">https://doi.org/10.47989/ir30140522</a>
+							Weber, Jan Raoul (2025). Hektor’s framework, embodiment and superabundance in research on information activities in serious leisure. <i><a href="https://informationr.net/infres" target="_blank">Information Research</a></i>,<i>30</i>(a). <a href="https://doi.org/10.47989/ir30140522" target="_blank">https://doi.org/10.47989/ir30140522</a></p>
 								
 							</header>
 
